--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -4,6 +4,8 @@ html {
 
 body {
     font-family:
+        Poppins,
+        "Playfair Display",
         -apple-system,
         BlinkMacSystemFont,
         "Segoe UI",
@@ -17,4 +19,10 @@ body {
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.6;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
