--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -91,6 +91,8 @@
     }
 
     .user {
-        display: inline-block;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
     }
 }
