--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -28,6 +28,21 @@
     color: black;
 }
 
+.disabled {
+    display: block;
+    color: rgb(153, 153, 153);
+    line-height: 44px;
+    min-width: 44px;
+    padding: 0 1.2rem;
+    font-weight: 300;
+    position: relative;
+    top: 0.4rem;
+}
+
+.disabled:hover {
+    cursor: not-allowed;
+}
+
 @media (min-width: 1024px) {
     .nav {
         display: block;
