--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.8rem 2.0rem;
+    padding: var(--s-minus) var(--m-plus);
     flex-shrink: 0;
     position: sticky;
 }
@@ -37,12 +37,12 @@
     min-height: 44px;
     outline: none;
     position: relative;
-    left: 1.2rem;
+    left: var(--s-plus);
 }
 
 .cancelIcon {
-    width: 1.6rem;
-    height: 1.6rem;
+    width: var(--m-size);
+    height: var(--m-size);
     position: relative;
     top: 0.2rem;
 }
@@ -50,7 +50,7 @@
 .items {
     flex-grow: 1;
     overflow: auto;
-    padding: 2.0rem;
+    padding: var(--m-plus);
 }
 
 .footer {
@@ -60,7 +60,7 @@
     bottom: 0;
     z-index: 2;
     background-color: white;
-    padding: 2.0rem 2.0rem;
+    padding: var(--m-plus);
 }
 
 .subtotal {
@@ -71,7 +71,7 @@
 }
 
 .price {
-    color: rgb(205, 0, 0);
+    color: var(--red);
 }
 
 .submit {
@@ -79,12 +79,12 @@
     width: 100%;
     min-height: 44px;
     color: white;
-    background-color: rgb(45, 45 ,45);
+    background-color: var(--black);
     user-select: none;
 }
 
 .submit:disabled {
-    background-color: rgb(153, 153, 153);
+    background-color: var(--gray);
 }
 
 .submit:disabled:hover {
