--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,13 +1,13 @@
 .section {
-    background-color: rgb(240, 240, 240);
+    background-color: var(--white);
     margin-top: 4.8rem;
 }
 
 .footer {
-    padding: 2.4rem 0;
+    padding: var(--l-size) 0;
     max-width: 1024px;
     margin: 0 auto;
     text-align: center;
-    font-size: 1.2rem;
-    color: rgb(153, 153, 153);
+    font-size: var(--s-plus);
+    color: var(--gray);
 }
