--- a/src/components/ProductForm/ProductForm.module.css
+++ b/src/components/ProductForm/ProductForm.module.css
@@ -1,10 +1,10 @@
 .container {
-    margin-top: 2.0rem;
-    color: rgb(45, 45 ,45);
+    margin-top: var(--m-plus);
+    color: var(--black);
 }
 
 .name {
-    font-size: 2.0rem;
+    font-size: var(--m-plus);
 }
 
 .price {
@@ -12,8 +12,8 @@
 }
 
 .abstract {
-    font-size: 1.4rem;
-    padding: 4.0rem 0;
+    font-size: var(--m-minus);
+    padding: var(--xl-size) 0;
 }
 
 .quantity {
@@ -23,13 +23,13 @@
 }
 
 .label {
-    font-size: 2.0rem;
+    font-size: var(--m-plus);
     font-weight: 300;
 }
 
 .controls {
     min-height: 44px;
-    border: 1px solid rgb(45, 45 ,45);
+    border: 1px solid var(--black);
     display: inline-flex;
     align-items: center;
     user-select: none;
@@ -38,13 +38,13 @@
 .control {
     min-width: 44px;
     min-height: 44px;
-    font-size: 2.4rem;
+    font-size: var(--l-size);
     font-weight: 300;
     outline: none;
 }
 
 .control:disabled {
-    color: rgb(153, 153, 153);
+    color: var(--gray);
 }
 
 .control:disabled:hover {
@@ -55,26 +55,22 @@
     display: inline-block;
     text-align: center;
     min-width: 44px;
-    padding: 0 0.8rem;
+    padding: 0 var(--s-minus);
 }
 
 .submit {
     display: block;
-    margin-top: 2.4rem;
+    margin-top: var(--l-size);
     width: 100%;
     min-height: 44px;
     color: white;
-    background-color: rgb(45, 45 ,45);
+    background-color: var(--black);
     user-select: none;
     outline: none;
 }
 
-.submit:active {
-    background-color: rgb(75, 75, 75);
-}
-
 .submit:disabled {
-    background-color: rgb(153, 153, 153);
+    background-color: var(--gray);
 }
 
 .submit:disabled:hover {
