--- a/src/pages/MemberPage/MemberPage.module.css
+++ b/src/pages/MemberPage/MemberPage.module.css
@@ -4,12 +4,12 @@
 
 .container {
     max-width: 1024px;
-    padding: 2.0rem;
+    padding: var(--m-plus);
     margin: 0 auto;
 }
 
 .heading {
-    font-size: 2.4rem;
+    font-size: var(--l-size);
     font-weight: 300;
     text-align: center;
 }
