--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -8,33 +8,33 @@
 .form {
     width: 360px;
     margin: 0 auto;
-    padding: 0 2.0rem;
+    padding: 0 var(--m-plus);
 }
 
 .heading {
     font-weight: lighter;
-    font-size: 2.4rem;
+    font-size: var(--l-size);
     text-align: center;
     line-height: 7.2rem;
 }
 
 .message {
-    margin-top: 2.4rem;
-    color: rgb(153, 153, 153);
+    margin-top: var(--l-size);
+    color: var(--gray);
     display: inline-block;
-    line-height: 4.0rem;
+    line-height: var(--xl-size);
 }
 
 .label {
     display: block;
-    padding: 1.2rem 0;
+    padding: var(--s-plus) 0;
 }
 
 .input {
     display: block;
     width: 100%;
     line-height: 44px;
-    padding: 0 1.4rem;
+    padding: 0 var(--m-minus);
 }
 
 .submit {
@@ -42,12 +42,12 @@
     width: 100%;
     line-height: 48px;
     color: white;
-    background-color: rgb(45, 45, 45);
-    margin-top: 2.0rem;
+    background-color: var(--black);
+    margin-top: var(--m-plus);
 }
 
 .submit:disabled {
-    background-color: rgb(153, 153, 153);
+    background-color: var(--gray);
 }
 
 .submit:disabled:hover {
